# rust-alc-api

./: .bazelrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  coverage_100.toml  deploy.sh  docker-compose.yml  test_and_deploy.sh  遠隔点呼_実装要件チェックリスト.md
cloudrun/: render.sh
crates/alc-core/: Cargo.toml
crates/alc-core/src/: auth_jwt.rs  auth_line.rs  auth_lineworks.rs  auth_middleware.rs  fcm.rs  lib.rs  middleware.rs  models.rs  storage.rs  tenant.rs  webhook.rs
crates/alc-core/src/repo/: auth.rs
crates/alc-core/src/repository/: auth.rs  bot_admin.rs  car_inspections.rs  carins_files.rs  carrying_items.rs  communication_items.rs  daily_health.rs  devices.rs  driver_info.rs  dtako_csv_proxy.rs  dtako_daily_hours.rs  dtako_drivers.rs  dtako_event_classifications.rs  dtako_logs.rs  dtako_operations.rs  dtako_restraint_report.rs  dtako_restraint_report_pdf.rs  dtako_scraper.rs  dtako_upload.rs  dtako_vehicles.rs  dtako_work_times.rs  employees.rs  equipment_failures.rs  guidance_records.rs  health_baselines.rs  measurements.rs  mod.rs  nfc_tags.rs  notify_line_config.rs  sso_admin.rs  tenant_users.rs  tenko_call.rs  tenko_records.rs  tenko_schedules.rs  tenko_sessions.rs  tenko_webhooks.rs  timecard.rs  trouble_categories.rs  trouble_offices.rs  trouble_progress_statuses.rs  (+2 more)
migrations/: 003_create_users.sql  026_add_medical_manual_input.sql  035_create_devices.sql  036_add_device_id_to_time_punches.sql  047_unified_auth_model.sql  048_carins_tables.sql  049_create_bot_configs.sql  050_add_device_always_on.sql  051_add_watchdog_running.sql  (+23 more)
src/: fcm.rs  (+4 more)
(+252 files in other folders)
